2008-03-23  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-int.h: Add el_div and el_ldiv operators to the
	binops that were missing them. Added elem_pow functions for mixed
	integer floating point cases. Initialize the mixed integer
	floating point cases.

2008-03-21  John W. Eaton  <jwe@octave.org>

	* ov-cell.h (octave_cell::is_constant): Return true.
	* ov-cell.h, ov-cell.cc (octave_cell::subsref (const std::string&,
	const std::list<octave_value_list>&)): Define.
	(octave_cell::subsref (const std::string&,
	const std::list<octave_value_list>&, int)): Call panic_impossible.

	* ov-struct.h (octave_struct::is_constant): New function.
	* ov-struct.h, ov-struct.cc (octave_struct::subsref (const std::string&,
	const std::list<octave_value_list>&)): Define.
	(octave_struct::subsref (const std::string&,
	const std::list<octave_value_list>&, int)): Call panic_impossible.

2008-03-21  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/amd.cc: New file.
	* Makefile.in (DLD_XSRC): Add amd.cc.

2008-03-20  David Bateman  <dbateman@free.fr>

	* Cell.cc (Cell Cell::diag (void) const): delete.
	(Cell Cell::diag (octave__idx_type) const):Rewrite in terms of
	template classes function.
	* Cell.h (Cell diag (void) const): delete.

	* ov.h (octave_value diag (octave_idx_type) const): New method.
	* ov-base.h (virtual octave_value diag (octave_idx_type) const):
	New virtual method.
	* ov-base.cc (octave_value octave_base_value::diag
	(octave_idx_type) const): New default method.
	
	* ov-base-mat.h (octave_value diag (octave_idx_type) const): New
	method. 
	* ov-base-sparse.h (octave_value diag (octave_idx_type) const): New
	method. 
	* ov-base-scalar.h (octave_value diag (octave_idx_type) const): New
	method. 
	* ov-range.h (octave_value diag (octave_idx_type) const): New
	method. 

	* data.cc (make_diag, make_spdiag): Delete.
	(Fdiag): Rewrite in terms of octave_value diag function.
		
	* data.cc (static octave_value make_diag (const Cell&,